opam-version: "2.0"
version: "0.1"
author: "simon@imandra.ai"
synopsis: "OCaml reimplementation of Minisat"
maintainer: "simon@imandra.ai"
build: [
  ["dune" "build" "-p" name]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" { >= "4.06" }
  "camlzip"
  "dune" {build}
  "odoc" {with-doc}
  "qtest" {with-test}
  "qcheck" {with-test}
]
tags: [ "minisat" "solver" "SAT" ]
homepage: "https://github.com/AestheticIntegration/minisat-ml/"
dev-repo: "git+https://github.com/AestheticIntegration/minisat-ml.git"
bug-reports: "https://github.com/AestheticIntegration/minisat-ml/issues"

